# unsupervised-bias-detection

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  Technical_Documentation_Unsupervised_bias_scan.docx  notebook.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  requs.txt
.github/workflows/: ci.yml  release.yml
HBAC_scan/: HBAC_BERT_disinformation_classifier.ipynb  HBAC_BERT_disinformation_sensitivity.ipynb  HBAC_BERT_disinformation_sensitivity_testing.ipynb  HBAC_loan_approval_classifier.ipynb  helper_functions.py  test_pred_BERT.csv
HBAC_scan/CLC/: HBAC_CLC.ipynb
HBAC_scan/Disfinformation/: HBAC_BERT_disinformation_classifier.ipynb
HBAC_scan/Loan approval/: HBAC_loan_approval_classifier.ipynb
audit_commission/: Problem statement disinformation detection.docx
bias_detection_tool/: __init__.py
bias_detection_tool/clustering/: __init__.py  _bahc.py  _kmeans.py  _kmodes.py
bias_scan/: __init__.py
bias_scan/clustering/: __init__.py  _bahc.py  _kmeans.py  _kmodes.py
classifiers/BERT_disinformation_classifier/: .gitattributes  BERT_Twitter_classifier.ipynb  best_model.pth  pred_BERT.csv  test.tsv  train.tsv  val.tsv
classifiers/Loan_approval_classifier/: GermanCredit_classifier.ipynb  german_dataset.py  helper_functions.py  pred_XGBoost.csv  test_pred_XGBoost.csv
data/: Table1_SD_20k.csv  twitter1516_final.csv
data/CLC_dataset/: CLC_dummy_data.ipynb
notebooks/: COMPAS_FP.ipynb  helper_function.py  helper_functions_SDG.py  notebook_SDG.ipynb  notebook_categorical.ipynb  notebook_numerical.ipynb
paper_analysis/: analysis.ipynb  analysis_check.ipynb  analysis_utils.py  figures.ipynb  params.py  requirements.txt  results_clust.csv  run_experiment.py
tests/: test_bahc.py  test_dataset.py  test_validation.py
unsupervised_bias_detection/: __init__.py
(+20 files in other folders)
