[tool.poetry]
name = "unsupervised-bias-detection"
version = "0.2.1"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
kmodes = "^0.12.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
kmodes = "^0.12.2"
ruff = "^0.2.2"
pytest = "^8.0.2"
pandas = "^2.2.2"
fairlearn = "^0.10.0"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
